--- a/automation.html
+++ b/automation.html
@@ -1,112 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top 10 AI Automation Tools</title>
-  <style>
-    body {
-      background-color: #0d0b1d;
-      color: #ffffff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 30px;
-      margin: 0;
-    }
-    h1 {
-      font-size: 2.5em;
-      color: #00fff7;
-      text-shadow: 0 0 10px #00fff7;
-      margin-bottom: 40px;
-      text-align: center;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 20px;
-    }
-    .tool-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid #2a2a3d;
-      border-radius: 15px;
-      padding: 20px;
-      transition: 0.3s ease-in-out;
-    }
-    .tool-card:hover {
-      background: rgba(255, 255, 255, 0.1);
-    }
-    .tool-name {
-      font-size: 1.2em;
-      color: #69f6ff;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .tool-desc {
-      font-size: 0.95em;
-      color: #e0e0e0;
-      margin-bottom: 10px;
-    }
-    .tool-link {
-      color: #a782f9;
-      text-decoration: none;
-    }
-    .tool-link:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <h1>Top 10 AI Automation Tools</h1>
-  <div class="grid">
-    <div class="tool-card">
-      <div class="tool-name">Zapier</div>
-      <div class="tool-desc">Connects and automates workflows across apps with AI logic.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Zapier</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Make</div>
-      <div class="tool-desc">Visual automation builder with API and AI integration.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Make</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Bardeen</div>
-      <div class="tool-desc">No-code automation with AI triggers and workflows.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Bardeen</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Notion AI</div>
-      <div class="tool-desc">Embedded AI for notes, tasks, and smart docs.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Notion AI</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Axiom</div>
-      <div class="tool-desc">Browser automation without coding, ideal for scraping.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Axiom</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Copy.ai</div>
-      <div class="tool-desc">AI workflows and tools for business automation.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Copy.ai</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Taskade</div>
-      <div class="tool-desc">AI-powered to-do list, mindmap, and task management.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Taskade</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Browse AI</div>
-      <div class="tool-desc">Automate data extraction from websites.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Browse AI</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Tiledesk</div>
-      <div class="tool-desc">AI chatbot and automation platform for support.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Tiledesk</a>
-    </div>
-    <div class="tool-card">
-      <div class="tool-name">Outfunnel</div>
-      <div class="tool-desc">Sales and marketing automation with AI data sync.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Outfunnel</a>
-    </div>
-  </div>
-</body>
-</html>
+<!-- Similar responsive adaptation for automation tools with logos -->
