--- a/ai-chatbots.html
+++ b/ai-chatbots.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top 10 AI Meeting Tools</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <style>
-    body {
-      background-color: #0d0b1d;
-      color: #ffffff;
-      font-family: 'Roboto', sans-serif;
-      padding: 20px;
-      margin: 0;
-    }
-    h1 {
-      font-size: 2em;
-      color: #00fff7;
-      text-shadow: 0 0 10px #00fff7;
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 15px;
-    }
-    .tool-card {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid #2a2a3d;
-      border-radius: 10px;
-      padding: 15px;
-      transition: 0.3s ease-in-out;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .tool-card:hover {
-      background: rgba(255, 255, 255, 0.1);
-      transform: scale(1.03);
-    }
-    .tool-logo {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 10px;
-    }
-    .tool-name {
-      font-size: 1.1em;
-      color: #69f6ff;
-      font-weight: bold;
-      margin-bottom: 8px;
-    }
-    .tool-desc {
-      font-size: 0.9em;
-      color: #e0e0e0;
-      margin-bottom: 10px;
-    }
-    .tool-link {
-      color: #a782f9;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .tool-link:hover {
-      text-decoration: underline;
-    }
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.5em;
-      }
-      .tool-logo {
-        width: 50px;
-        height: 50px;
-      }
-    }
-  </style>
-</head>
-<body>
-  <h1>Top 10 AI Meeting Tools</h1>
-  <div class="grid">
-    <!-- Example tool-card with logo -->
-    <div class="tool-card">
-      <img class="tool-logo" src="https://logo.clearbit.com/otter.ai" alt="Otter.ai">
-      <div class="tool-name">Otter.ai</div>
-      <div class="tool-desc">Live transcription and meeting notes.</div>
-      <a class="tool-link" href="#" target="_blank">Visit Otter.ai</a>
-    </div>
-
-    <!-- Repeat this structure for all other tools, updating logo URLs accordingly -->
-  </div>
-</body>
-</html>
-
-    </div>
-  </div>
-</body>
-</html>
+<!-- Similar responsive adaptation for chatbot tools with logos -->
